# Allocate

./: .gitignore  Allocate-2026.03.pkg  Cargo.toml  DEVLOG.md  README.md  guide.md  test_xpc  test_xpc.c
allocate-cloud/: go.mod  main.go
allocate-core/: Cargo.toml
allocate-core/src/: battery.rs  frontmost.rs  governor.rs  ipc.rs  main.rs  process.rs
allocate-site/: index.html  package-lock.json  package.json
allocate-ui/allocate-icon.icon/: icon.json
allocate-ui/allocate-ui/: AllocateApp.swift  ContentView.swift  SettingsView.swift  XPCClient.swift
allocate-ui/allocate-ui/Assets.xcassets/AppIcon.appiconset/: Contents.json
dummy-hog/: Cargo.toml
dummy-hog/src/: main.rs
scripts/: build_pkg.sh  install_agent.sh
